# AI-SDK-BY-C-

./: CMakeLists.txt  chatDemo.cpp  test1.md
include/: Common.h
include/util/: myLog.h
src/util/: myLog.cpp
设计文档/: ChatSDK_UserBook.md  系统架构图.drawio  系统设计文档 (已自动恢复).docx  系统设计文档.docx
